creating doi with the same owner as pub req owner